force-app/main/default/objects/Proveedor__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carnicería</fullName>
            </value>
            <value>
                <fullName>Despensa</fullName>
            </value>
            <value>
                <fullName>Hamburguesería</fullName>
            </value>
            <value>
                <fullName>Heladería</fullName>
            </value>
            <value>
                <fullName>Hipermercado</fullName>
            </value>
            <value>
                <fullName>Minimercado</fullName>
            </value>
            <value>
                <fullName>Minutas</fullName>
            </value>
            <value>
                <fullName>Panadería</fullName>
            </value>
            <value>
                <fullName>Pizzería</fullName>
            </value>
            <value>
                <fullName>Restaurante</fullName>
            </value>
            <value>
                <fullName>Supermercado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>