force-app/main/default/objects/Proveedor__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <formula>IMAGE( Logo_Image_URL__c , &quot;Biggie Logo&quot;,  $Setup.Proveedor_Logo_Image_Setting__c.Height__c,  $Setup.Proveedor_Logo_Image_Setting__c.Width__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>