force-app/main/default/objects/Proveedor__c/fields/Logo_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_Image_URL__c</fullName>
    <defaultValue>$Setup.No_Logo_URL_Setting__c.URL_Address__c</defaultValue>
    <label>Logo Image URL</label>
    <type>Url</type>
</CustomField>