force-app/main/default/objects/Proveedor__c/fields/Logo_Miniature__c.field-meta.xml
<CustomField>
    <fullName>Logo_Miniature__c</fullName>
    <formula>IMAGE( Logo_Image_URL__c , &quot;Biggie Logo&quot;, 50, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Miniature</label>
    <type>Text</type>
</CustomField>