force-app/main/default/objects/Proveedor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Logo_Miniature__c</columns>
    <columns>Categoria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>